# modular-random-applicants-generator

./: .gitignore  CMakeLists.txt  README.md  config.cc  generator.cc
